--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -13,6 +13,9 @@
         android:theme="@style/Theme.Spenditure"
         tools:targetApi="31">
         <activity
+            android:name="com.spenditure.presentation.CreateTransactionActivity"
+            android:exported="false" />
+        <activity
             android:name="com.spenditure.application.MainActivity"
             android:exported="true"
             android:label="@string/app_name">
