--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -13,6 +13,9 @@
         android:theme="@style/Theme.Spenditure"
         tools:targetApi="31">
         <activity
+            android:name="com.spenditure.presentation.ViewCategoryActivity"
+            android:exported="false" />
+        <activity
             android:name="com.spenditure.presentation.TransactionsListViewActivity"
             android:exported="false" />
         <activity
@@ -25,7 +28,7 @@
             android:name="com.spenditure.presentation.CreateTransactionActivity"
             android:exported="false" />
         <activity
-            android:name="com.spenditure.application.MainActivity"
+            android:name="com.spenditure.presentation.ViewReportActivity"
             android:exported="true"
             android:label="@string/app_name">
             <intent-filter>
