--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -13,19 +13,19 @@
         android:theme="@style/Theme.Spenditure"
         tools:targetApi="31">
         <activity
-            android:name="com.spenditure.presentation.ViewCategoryActivity"
+            android:name="com.spenditure.presentation.category.ViewCategoryActivity"
             android:exported="false" />
         <activity
-            android:name="com.spenditure.presentation.TransactionsListViewActivity"
+            android:name="com.spenditure.presentation.transaction.TransactionsListViewActivity"
             android:exported="false" />
         <activity
-            android:name="com.spenditure.presentation.EditTransactionActivity"
+            android:name="com.spenditure.presentation.transaction.EditTransactionActivity"
             android:exported="false" />
         <activity
-            android:name="com.spenditure.presentation.ViewTransactionsActivity"
+            android:name="com.spenditure.presentation.transaction.ViewTransactionsActivity"
             android:exported="false" />
         <activity
-            android:name="com.spenditure.presentation.CreateTransactionActivity"
+            android:name="com.spenditure.presentation.transaction.CreateTransactionActivity"
             android:exported="false" />
         <activity
             android:name="com.spenditure.presentation.ViewReportActivity"
