Cleaned the code for UI, fixed navHandler
add variable for each value used in xml and rename symbol in drawable with prefix
fix bug and add navhandler to viewReportActivity
move report activity to package

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -28,7 +28,7 @@
             android:name="com.spenditure.presentation.transaction.CreateTransactionActivity"
             android:exported="false" />
         <activity
-            android:name="com.spenditure.presentation.ViewReportActivity"
+            android:name="com.spenditure.presentation.report.ViewReportActivity"
             android:exported="true"
             android:label="@string/app_name">
             <intent-filter>
