--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -13,7 +13,7 @@
         android:theme="@style/Theme.Spenditure"
         tools:targetApi="31">
         <activity
-            android:name=".CategorySpinnerActivity"
+            android:name="com.spenditure.presentation.category.CategorySpinnerActivity"
             android:exported="false" />
         <activity
             android:name="com.spenditure.presentation.category.ViewCategoryActivity"
