--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -41,6 +41,9 @@
             android:name="com.spenditure.presentation.transaction.CreateTransactionActivity"
             android:exported="false" />
         <activity
+            android:name="com.spenditure.presentation.ViewProfileActivity"
+            android:exported="false" />
+        <activity
             android:name="com.spenditure.presentation.report.ViewReportActivity"
             android:exported="true"/>
     </application>
