--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -2,6 +2,10 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools">
 
+    <uses-feature android:name="android.hardware.camera.any" />
+
+    <uses-permission android:name="android.permission.CAMERA" />
+
     <application
         android:allowBackup="true"
         android:dataExtractionRules="@xml/data_extraction_rules"
@@ -13,12 +17,14 @@
         android:theme="@style/Theme.Spenditure"
         tools:targetApi="31">
         <activity
+            android:name="com.spenditure.presentation.ImageCaptureActivity"
+            android:exported="false" />
+        <activity
             android:name="com.spenditure.presentation.LoginActivity"
             android:exported="true"
             android:label="@string/app_name">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
-
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
@@ -45,7 +51,7 @@
             android:exported="false" />
         <activity
             android:name="com.spenditure.presentation.report.ViewReportActivity"
-            android:exported="true"/>
+            android:exported="true" />
     </application>
 
 </manifest>
