--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -17,6 +17,9 @@
         android:theme="@style/Theme.Spenditure"
         tools:targetApi="31">
         <activity
+            android:name="com.spenditure.presentation.RegistrationActivity"
+            android:exported="false" />
+        <activity
             android:name="com.spenditure.presentation.ImageViewActivity"
             android:exported="false" />
         <activity
