--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -17,6 +17,15 @@
         android:theme="@style/Theme.Spenditure"
         tools:targetApi="31">
         <activity
+            android:name=".presentation.ViewGoalsActivity"
+            android:exported="false" />
+        <activity
+            android:name=".presentation.GoalListViewActivity"
+            android:exported="false" />
+        <activity
+            android:name=".presentation.CreateGoalActivity"
+            android:exported="false" />
+        <activity
             android:name=".presentation.CustomSecurityQuestionSpinnerActivity"
             android:exported="false" />
         <activity
