--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -17,13 +17,13 @@
         android:theme="@style/Theme.Spenditure"
         tools:targetApi="31">
         <activity
-            android:name=".presentation.ViewGoalsActivity"
+            android:name=".presentation.Goals.ViewGoalsActivity"
             android:exported="false" />
         <activity
-            android:name=".presentation.GoalListViewActivity"
+            android:name=".presentation.Goals.GoalListViewActivity"
             android:exported="false" />
         <activity
-            android:name=".presentation.CreateGoalActivity"
+            android:name=".presentation.Goals.CreateGoalActivity"
             android:exported="false" />
         <activity
             android:name=".presentation.CustomSecurityQuestionSpinnerActivity"
